--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,13 @@ dependencies:
   camera:
   path_provider:
   path:
+  cloud_firestore: ^3.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.11.0
 
 dev_dependencies:
   flutter_test:
