--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,14 @@ dependencies:
   camera:
   path_provider:
   path:
-  cloud_firestore: ^3.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^3.1.6
   firebase_core: ^1.11.0
+  firebase_auth: ^3.3.5
 
 dev_dependencies:
   flutter_test:
